fixing heading spacing on index. fixed (mostly) slideshow z-index issue

--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ main .heading-split-bar-01 h2, main.on .heading-split-bar-01 h2 {
 }
 
 main section {
-  padding-top: 0;
+  /*padding-top: 0;*/
 }
 
 section.divider {
@@ -250,9 +250,10 @@ figure.frame {
 
 main .slideshow img, main.on .slideshow img {
   opacity: 0;
-  transition: opacity 0.7s;
+  transition: all 0.7s;
   position: absolute;
   top: 0;
+  z-index: 1;
 }
 
 main .slideshow img:first-child, main .slideshow img.show:first-child {
@@ -262,7 +263,7 @@ main .slideshow img:first-child, main .slideshow img.show:first-child {
 
 main .slideshow img.show, main.on .slideshow img.show {
   opacity: 1;
-  z-index: 2;
+  /*z-index: 2;*/
 }
 
 article {
